[package]
name = "meet-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backoff = "0.4.0"
clap = { version = "4.2.7", features = ["derive"] }
headless_chrome = "1.0.5"
reqwest = { version = "0.11.17", features = ["blocking", "json"] }
retry = "2.0.0"
serde = { version = "1.0.162", features = ["derive"] }
