[package]
name = "meetctl"
version = "0.3.0"
edition = "2021"


[dependencies]
backoff = "0.4.0"
clap = { version = "4.2.7", features = ["derive"] }
headless_chrome = "1.0.5"
reqwest = { version = "0.11.17", features = ["blocking", "json"] }
retry = "2.0.0"
run_script = "0.10.1"
serde = { version = "1.0.162", features = ["derive"] }
